force-app/main/default/objects/Opportunity_Product_BFI__c/Opportunity_Product_BFI__c.object-meta.xml
<CustomObject>
    <label>Opportunity Product BFI</label>
    <nameField>
        <label>Opportunity Product BFI Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Products BFI</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>