force-app/main/default/objects/Opportunity_Product_BFI__c/fields/Angsuran__c.field-meta.xml
<CustomField>
    <fullName>Angsuran__c</fullName>
    <label>Angsuran</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>