force-app/main/default/objects/Opportunity_Product_BFI__c/fields/Bunga_Flat__c.field-meta.xml
<CustomField>
    <fullName>Bunga_Flat__c</fullName>
    <label>Bunga Flat</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>