force-app/main/default/objects/Opportunity_Product_BFI__c/fields/Jenis_Asset__c.field-meta.xml
<CustomField>
    <fullName>Jenis_Asset__c</fullName>
    <label>Jenis Asset</label>
    <length>255</length>
    <type>Text</type>
</CustomField>