force-app/main/default/objects/Opportunity_Product_BFI__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Products BFI</relationshipLabel>
    <relationshipName>Opportunity_Products_BFI</relationshipName>
    <type>Lookup</type>
</CustomField>