force-app/main/default/objects/Opportunity_Product_BFI__c/fields/Nama_Sertipikat__c.field-meta.xml
<CustomField>
    <fullName>Nama_Sertipikat__c</fullName>
    <label>Nama Sertipikat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>