force-app/main/default/objects/Opportunity_Product_BFI__c/fields/NTF_Pengajuan__c.field-meta.xml
<CustomField>
    <fullName>NTF_Pengajuan__c</fullName>
    <label>NTF Pengajuan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>